--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,12 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Rye')
+    script(src="/javascripts/bootstrap.min.js")
+    script(src="/javascripts/angular.min.js")
+    script(src="/javascripts/game.js")
+  body(ng-app='GameApp')
     block content
