fix path and next round

--- a/views/game.jade
+++ b/views/game.jade
@@ -5,7 +5,7 @@ block content
         audio(autoplay,loop, muted)
             source(src="/images/music.mp3" type="audio/mpeg")
         video(autoplay,loop,muted)
-            source(src="http://localhost:3000/images/background-video.mp4" type="video/mp4" style="height:100%;width:100%")
+            source(src="/images/background-video.mp4" type="video/mp4" style="height:100%;width:100%")
         div.desertbottom
             div.desert
               div.tumbleweed
