--- a/views/game.jade
+++ b/views/game.jade
@@ -38,5 +38,5 @@ block content
 
             br
 
-            button.btn.btn-lg.btn-success(role='button', ng-click="stopPlayer(1)") Player 1
-            button.btn.btn-lg.btn-success(role='button', ng-click="stopPlayer(2)") Player 2
+            button.btn.btn-lg.btn-success(role='button', ng-click="calibratePlayer(1)") Player 1
+            button.btn.btn-lg.btn-success(role='button', ng-click="calibratePlayer(2)") Player 2
