--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,15 @@ video {
 
     position: relative;
     overflow: hidden;
+    background-color:rgba(255,255,255,0.6);
+    width:600px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:100px;
+    border-radius:10px;
+}
+.form-container.game-init {
+    background-color:rgba(255,0,0,0.6);
 }
 
 .form-container .text-center {
