fix css & ping interval

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,7 @@ video {
     display: none !important;
 }
 .debug-mode .debug {
-    display: inline-block;
+    display: inline-block !important;
 }
 
 
